--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -214,10 +214,16 @@ public without sharing class ParticipantEnrollmentService {
             'Study_Site__r.Clinical_Trial_Profile__r.Link_to_Pre_screening__c',
             'Study_Site__r.Site__r.Name',
             'Study_Site__r.Site__r.BillingStreet',
+            'Study_Site__r.Principal_Investigator__r.Name',
+            'Study_Site__r.Principal_Investigator__r.Salutation',
+            'Study_Site__r.Principal_Investigator__r.Language__c',
+            'Study_Site__r.Study_Site_Phone__c',
             'Is_Virtual_Study_Site__c',
             'HCP__r.Status__c',
             'HCP__r.HCP_Contact__c',
             'HCP__r.HCP_Contact__r.Name',
+            'HCP__r.HCP_Contact__r.Salutation',
+            'HCP__r.HCP_Contact__r.Language__c',
             'HCP__r.HCP_Contact__r.AccountId',
             'HCP__r.HCP_Contact__r.Account.Name',
             'HCP__r.HCP_Contact__r.Account.BillingCountryCode',
