Delegate account settings add contact inf

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -110,6 +110,7 @@ public without sharing class AccountSettingsController {
                         , LastName
                         , AccountId
                         , Email
+                        , Phone
                         , primaryContact__c
                         , primaryContact__r.AccountId
                         , HasOptedOutOfEmail
