Aura helper update

--- a/force-app/main/default/classes/AuraHelper.cls
+++ b/force-app/main/default/classes/AuraHelper.cls
@@ -4,8 +4,8 @@
 
 public class AuraHelper {
     
-    public static void throwException(Exception e){
+    public static Object throwException(Exception e){
         throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
-    } 
+    }
 
 }
