--- a/force-app/main/default/classes/StudyTrialService.cls
+++ b/force-app/main/default/classes/StudyTrialService.cls
@@ -3,6 +3,22 @@
  */
 
 public without sharing class StudyTrialService {
+    private static List<String> TRIAL_FIELDS = new List<String>{
+            'Id',
+            'Name',
+            'Study_Sponsor__c',
+            'Detailed_Description__c',
+            'Override_Recruitment_Status__c',
+            'Terms_And_Conditions_ID__c',
+            'Link_to_Medical_Record_Review__c',
+            'Link_to_Pre_screening__c',
+            'Study_Title__c',
+            'Study_Code_Name__c',
+            'Official_Title__c',
+            'Sponsor_Pays_for_Referral_Activity__c',
+            'Override_Inclusion_Criteria__c',
+            'Override_Description__c'
+    };
 
     public class StudyFilterData {
         public String enrollmentStatus;
@@ -27,6 +43,7 @@ public without sharing class StudyTrialService {
         public Integer nearestSiteDistance;
         public List<StudyTotalPassed> statistics = new List<StudyTotalPassed>();
         public String trialRecruitmentStatusLabel;
+        public Boolean hasHCPEnrollments;
     }
 
     public class SearchResults {
@@ -37,11 +54,11 @@ public without sharing class StudyTrialService {
     public static StudyFilterData getStudyFilterData() {
         StudyFilterData filterData = new StudyFilterData();
 
-        filterData.enrollmentStatus = 'Test Status';
-        filterData.enrollmentStatuses = new List<LabelValueItem>{
-                new LabelValueItem('Test Status', 'Test Status'),
-                new LabelValueItem('Test Status2', 'Test Status2'),
-                new LabelValueItem('Test Status3', 'Test Status3')
+        filterData.therapeuticArea = 'All Therapeutic Areas';
+        filterData.therapeuticAreas = new List<LabelValueItem>{
+                new LabelValueItem('Therapeutic Area 1', 'Therapeutic Area 1'),
+                new LabelValueItem('Therapeutic Area 2', 'Therapeutic Area 2'),
+                new LabelValueItem('Therapeutic Area 3', 'Therapeutic Area 3')
         };
 
         filterData.enrollmentStatus = 'Actively Enrolling';
@@ -63,13 +80,25 @@ public without sharing class StudyTrialService {
         return sortData;
     }
 
-    public static String getStudiesJSON(String filterDataJSON, String sortDataJSON, String paginationDataJSON) {
+    public static StudySortData getStudySortDataForHCP() {
+        StudySortData sortData = new StudySortData();
+        sortData.sortType = SortOrder.STUDIES_HCP_SORT_TYPES[0].value;
+        sortData.sortVariants = SortOrder.STUDIES_HCP_SORT_TYPES;
+
+        return sortData;
+    }
+
+    public static String getStudiesJSON(String filterDataJSON, String sortDataJSON, String paginationDataJSON, Boolean isSearchResume) {
         StudyFilterData filterData = (StudyFilterData) JSON.deserialize(filterDataJSON, StudyFilterData.class);
         StudySortData sortData = (StudySortData) JSON.deserialize(sortDataJSON, StudySortData.class);
         PaginationData paginationData = (PaginationData) JSON.deserialize(paginationDataJSON, PaginationData.class);
 
-        List<StudyDetailItem> studies = getStudies(filterData, sortData, paginationData);
-        paginationData.setRecordsCount(studies.size());
+        List<StudyDetailItem> studies = new List<StudyTrialService.StudyDetailItem>();
+        if (isSearchResume) {
+            studies = searchStudiesGlobal(filterData, sortData, paginationData);
+        } else {
+            studies = getStudies(filterData, sortData, paginationData);
+        }
 
         SearchResults sr = new SearchResults();
         sr.records = studies;
@@ -106,6 +135,62 @@ public without sharing class StudyTrialService {
         }
     }
 
+    public static List<StudyDetailItem> searchStudiesGlobal(StudyFilterData filterData, StudySortData sortData, PaginationData paginationData) {
+        String query = 'SELECT ' + String.join(TRIAL_FIELDS, ', ') + ' FROM Clinical_Trial_Profile__c WHERE ';
+        query += '(Override_Recruitment_Status__c = \'Actively Enrolling\') ';
+
+        if (filterData.searchText != null && filterData.searchText.length() >= 3) {
+            query += 'AND (Study_Code_Name__c LIKE \'%' + filterData.searchText + '%\') ';
+        }
+
+        if (sortData.sortType == 'CreatedDate DESC') {
+            query += 'ORDER BY CreatedDate DESC ';
+        }
+        if (sortData.sortType == 'Distance ASC') {
+            query += 'ORDER BY Study_Code_Name__c ASC ';
+        }
+        query += 'LIMIT 50';
+        List<Clinical_Trial_Profile__c> trials = Database.query(query);
+
+        List<Clinical_Trial_Profile__c> trialsOnPage = new List<Clinical_Trial_Profile__c>();
+        Integer leftRecord = (paginationData.currentPage - 1) * paginationData.pageRecordsCount;
+        Integer rightRecord = Math.min(leftRecord + paginationData.pageRecordsCount, trials.size());
+        for (Integer i = leftRecord; i < rightRecord; i++) {
+            trialsOnPage.add(trials[i]);
+        }
+        paginationData.setRecordsCount(trials.size());
+
+        String contactId = CommunityService.getUserContact().Id;
+        List<HCP_Enrollment__c> relatedEnrollments = [
+                SELECT Id, Clinical_Trial_Profile__c
+                FROM HCP_Enrollment__c
+                WHERE HCP_Contact__c = :contactId
+                AND Clinical_Trial_Profile__c != NULL
+        ];
+        Map<Id, List<HCP_Enrollment__c>> trialIdToEnrollments = new Map<Id, List<HCP_Enrollment__c>>();
+        for (HCP_Enrollment__c currEnrollment : relatedEnrollments) {
+            if (!trialIdToEnrollments.containsKey(currEnrollment.Clinical_Trial_Profile__c)) {
+                trialIdToEnrollments.put(currEnrollment.Clinical_Trial_Profile__c, new List<HCP_Enrollment__c>());
+            }
+            trialIdToEnrollments.get(currEnrollment.Clinical_Trial_Profile__c).add(currEnrollment);
+        }
+
+        List<StudyDetailItem> pageRecords = new List<StudyDetailItem>();
+        StudyActions.Action openStudySite = new StudyActions.Action('linkToStudySites', 'Find Sites For This Study', 'icon-12', false);
+        for (Clinical_Trial_Profile__c trial : trialsOnPage) {
+            StudyTrialService.StudyDetailItem studyDetailItem = new StudyTrialService.StudyDetailItem();
+            studyDetailItem.trial = trial;
+            studyDetailItem.studyActions = new List<StudyActions.Action>{
+                    openStudySite
+            };
+            studyDetailItem.trialRecruitmentStatusLabel = TranslateHelper.getPickListLabel(Clinical_Trial_Profile__c.Override_Recruitment_Status__c, trial.Override_Recruitment_Status__c);
+            studyDetailItem.hasHCPEnrollments = trialIdToEnrollments.get(trial.Id) != null && trialIdToEnrollments.get(trial.Id).size() > 0;
+            pageRecords.add(studyDetailItem);
+        }
+
+        return pageRecords;
+    }
+
     public static List<StudyDetailItem> getStudies(StudyFilterData filterData, StudySortData sortData, PaginationData paginationData) {
         // prepare enrollment records
         List<HCP_Enrollment__c> enrollments = HCPEnrollmentService.getHCPEnrollmentsForHCP();
@@ -130,6 +215,7 @@ public without sharing class StudyTrialService {
             StudyTrialService.StudyDetailItem studyDetailItem = new StudyTrialService.StudyDetailItem();
             studyDetailItem.hcpEnrollments = trialHCPEnrollmentMap.get(trial.Id);
             studyDetailItem.trial = trial;
+            studyDetailItem.hcpe = studyDetailItem.hcpEnrollments[0];
 
             // TODO: STATUS AND ACTIONS??
             studyDetailItem.studyStatus = studyDetailItem.hcpEnrollments[0].Status__c;
@@ -138,6 +224,9 @@ public without sharing class StudyTrialService {
             studyDetailItem.trialRecruitmentStatusLabel = TranslateHelper.getPickListLabel(Clinical_Trial_Profile__c.Override_Recruitment_Status__c, trial.Override_Recruitment_Status__c);
             pageRecords.add(studyDetailItem);
         }
+
+        System.debug('in getStudies');
+        System.debug(JSON.serializePretty(pageRecords));
 
         return pageRecords;
     }
@@ -171,29 +260,25 @@ public without sharing class StudyTrialService {
                 'Override_Description__c'
         };
 
-        List<String> fields = new List<String>{
-                'Id',
-                'Name',
-                'Study_Sponsor__c',
-                'Detailed_Description__c',
-                'Override_Recruitment_Status__c',
-                'Terms_And_Conditions_ID__c',
-                'Link_to_Medical_Record_Review__c',
-                'Link_to_Pre_screening__c',
-                'Study_Title__c',
-                'Study_Code_Name__c',
-                'Official_Title__c',
-                'Sponsor_Pays_for_Referral_Activity__c',
-                'Override_Inclusion_Criteria__c',
-                'Override_Description__c'
-        };
-        String trialQuery = 'SELECT ' + String.join(fields, ', ') + ' FROM Clinical_Trial_Profile__c WHERE (Id IN :trialsId) ';
+        String trialQuery = 'SELECT ' + String.join(TRIAL_FIELDS, ', ') + ' FROM Clinical_Trial_Profile__c WHERE (Id IN :trialsId) ';
+        if (sortData.sortType == 'Distance ASC') {
+            trialQuery += ' ORDER BY Study_Code_Name__c ASC ';
+        } else {
+            trialQuery += ' ORDER BY ' + sortData.sortType;
+        }
+        List<Clinical_Trial_Profile__c> trials = Database.query(trialQuery);
 
+        List<Clinical_Trial_Profile__c> trialsOnPage = new List<Clinical_Trial_Profile__c>();
+        Integer leftRecord = (paginationData.currentPage - 1) * paginationData.pageRecordsCount;
+        Integer rightRecord = Math.min(leftRecord + paginationData.pageRecordsCount, trials.size());
+        for (Integer i = leftRecord; i < rightRecord; i++) {
+            trialsOnPage.add(trials[i]);
+        }
+        paginationData.setRecordsCount(trials.size());
 
-        List<Clinical_Trial_Profile__c> queryResult = Database.query(trialQuery);
 
         List<Clinical_Trial_Profile__c> records = new List<Clinical_Trial_Profile__c>();
-        for (Clinical_Trial_Profile__c currTrial : queryResult) {
+        for (Clinical_Trial_Profile__c currTrial : trialsOnPage) {
 
             Boolean isMatchTerm = true;
             if (String.isNotBlank(filterData.searchText)) {
